--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -18,6 +18,8 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@types/dotenv-safe": "^8.1.2",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
-  }  
+  }
 }
