--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.3",
     "sequelize": "^6.17.0",
